  restart SQuirreL for plugin change to take effect.
  
- Added 'Use PK' button on the "Edit Where clause" dialog which will cause only
  PK columns to be used for updating rows in the table contents panel.
- Added "All Objects" to alias properties.
- Use the last directory that a file was imported from when importing 
  additional files for binary fields.

1743720: (Save settings immediately, not only when closing SQuirreL).  Now there
is a setting in Global Preferences to "Save Preferences Immediately" (Default 
is true) Additionally, if this is not desired and it can be disabled to give the 
old behavior (faster), and a new menu item under "File" called "Save Preferences" 
is available to immediately save everything that is normally saved during 
shutdown.

1742033: (Skipping quoting escape in table dropping) Refactoring plugin drop 
table functionality now handles tables with embedded double quotes by doubling 
the double quotes to allow the database to recognize the doubled quote as a 
single quote which is part of the identifier. Thanks goes to Thomas Mueller 
(from www.h2database.com) for contributing code to fix the issue)

1731251: (Cryptic exceptions with DB2 JCC driver) Provides an API to allow 
plugin authors to create and register custom exception formatters to be used 
when displaying error messages and the like in the session message panel.

Finished German translation

Bug-Fixes:
1752089 (ConcurrentModificationException raised when loading schema)

1716859 Can't see data in content tab or row count tab (MS SQLServer databases
        with a dash ("-") in their name would cause the content tab or row count
        tabs to render no data.

1714476 (DB copy uses wrong case for table names) The copy operation would
         sometimes fail to select records from the source table.  Since the
         case for the source table is always known to be correct, the plugin
         no longer erroneously attempts to correct the case.
